# png_whitify

./: entry_point.py  pyproject.toml
png_whitify/: cli.py  main.py
